--- a/website/lectures/stat479_refs.bib
+++ b/website/lectures/stat479_refs.bib
@@ -1,12 +1,30 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% https://bibdesk.sourceforge.io/
 
-%% Created for Sameer Deshpande at 2025-08-25 16:36:24 -0700 
+%% Created for Sameer Deshpande at 2025-09-02 16:55:39 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@unpublished{Grinsztajn2022,
+	author = {L{\'e}o Grinsztajn and Edouard Oyallaon and Ga{\"e}l Varoquaux},
+	date-added = {2025-09-02 16:54:37 -0500},
+	date-modified = {2025-09-02 16:55:39 -0500},
+	note = {\texttt{arXiv:2207.08815}},
+	title = {Why do tree-based models still outperfom deep learning on tabular data?},
+	year = {2022}}
+
+@article{Brieman2001,
+	author = {Leo Breiman},
+	date-added = {2025-09-02 16:49:29 -0500},
+	date-modified = {2025-09-02 16:49:56 -0500},
+	journal = {Machine Learning},
+	pages = {5--23},
+	title = {Random Forests},
+	volume = {45},
+	year = {2001}}
 
 @article{DeshpandeWyner2017,
 	author = {Sameer K. Deshpande and Abraham J. Wyner},
@@ -18,7 +36,8 @@
 	pages = {95--12},
 	title = {A hierarchical {Bayesian} model of pitch framing},
 	volume = {13},
-	year = {2017}}
+	year = {2017},
+	bdsk-url-1 = {https://doi.org/10.1515/jqas-2017-0027}}
 
 @article{DeshpandeJensen2016,
 	author = {Sameer K. Deshpande and Shane T. Jensen},
